<resources>
    <string name="app_name">Lab9_CollinWoodruff</string>
    <string name="name">Name:</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="delete">Delete</string>
    <string name="track">Track:</string>
    <string name="artist">Artist:</string>
    <string name="toggle">Is Awesome</string>
    <string name="empty">No Songs Available</string>
    <string name="addSong">Add Song</string>
    <string name="newSong">New Song</string>
    <string name="saveSong">Save Song</string>
    <string name="editSong">Edit Song</string>
    <string name="songName">SongName</string>
    <string name="artistName">ArtistName</string>
    <string name="trackNum">TrackNum</string>
    <string name="viewBtn">View Data</string>
</resources>
